added social links

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <body>
     
     <!-- Loading Screen -->
-    <!-- <section>
+    <section>
       <div id="loader" class="fixed inset-0 z-50 flex items-center justify-center bg-[#121212] text-white text-3xl font-bold">
     <div class="flex flex-col items-center gap-4">
       <div class="w-12 h-12 border-4 border-[#3b3f5c] border-t-transparent rounded-full spin"></div>
       <span>Loading...</span>
     </div>
   </div>
-    </section> -->
+    </section>
 
      <!-- Navbar -->
   <section>
@@ -53,7 +53,7 @@
     </h2>
     <p class="text-[#3b3f5c] text-lg mb-4">Web Developer</p>
     <p class="text-lg leading-relaxed mb-6">
-      I’m passionate about crafting scalable, elegant web solutions. I specialize in full-stack development, and I love building dark-themed interfaces that feel both modern and minimalist.
+      I’m passionate about crafting scalable, elegant web solutions. I specialize in web development, and I love building dark-themed interfaces that feel both modern and minimalist.
     </p>
     <a href="#projects"
       class="inline-block px-6 py-3 bg-[#3b3f5c] text-white rounded-full hover:bg-[#1e1e1e] transition font-medium">
@@ -95,22 +95,22 @@
     <h3 class="slide-in text-4xl font-bold mb-6 text-[#3b3f5c]">Connect With Me</h3>
     <p class="slide-in mb-8 text-lg">Let’s connect on the platforms below!</p>
     <div class="slide-in flex justify-center gap-6 flex-wrap">
-      <a href="https://www.instagram.com/" target="_blank" class="w-14 h-14 flex items-center justify-center border-2 border-[#3b3f5c] rounded-full hover:bg-[#3b3f5c] transition" title="Instagram">
+      <a href="https://www.instagram.com/1mmiiicc/" target="_blank" class="w-14 h-14 flex items-center justify-center border-2 border-[#3b3f5c] rounded-full hover:bg-[#3b3f5c] transition" title="Instagram">
         <svg class="w-6 h-6 fill-white" viewBox="0 0 24 24">
           <path d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2Zm0 1.5A4.25 4.25 0 0 0 3.5 7.75v8.5A4.25 4.25 0 0 0 7.75 20.5h8.5A4.25 4.25 0 0 0 20.5 16.25v-8.5A4.25 4.25 0 0 0 16.25 3.5h-8.5ZM12 7.25a4.75 4.75 0 1 1 0 9.5a4.75 4.75 0 0 1 0-9.5Zm0 1.5a3.25 3.25 0 1 0 0 6.5a3.25 3.25 0 0 0 0-6.5Zm4.75-.25a.75.75 0 1 1 0 1.5a.75.75 0 0 1 0-1.5Z"/>
         </svg>
       </a>
-      <a href="https://www.facebook.com/" target="_blank" class="w-14 h-14 flex items-center justify-center border-2 border-[#3b3f5c] rounded-full hover:bg-[#3b3f5c] transition" title="Facebook">
+      <a href="https://www.facebook.com/literallygeorge" target="_blank" class="w-14 h-14 flex items-center justify-center border-2 border-[#3b3f5c] rounded-full hover:bg-[#3b3f5c] transition" title="Facebook">
         <svg class="w-6 h-6 fill-white" viewBox="0 0 24 24">
           <path d="M13.5 9.5H16V7h-2.5a3 3 0 0 0-3 3v2H8v3h2.5V21h3v-6.5H16l.5-3h-3z"/>
         </svg>
       </a>
-      <a href="https://www.linkedin.com/" target="_blank" class="w-14 h-14 flex items-center justify-center border-2 border-[#3b3f5c] rounded-full hover:bg-[#3b3f5c] transition" title="LinkedIn">
+      <a href="https://www.linkedin.com/in/george-michael-literal-a787a3342/" target="_blank" class="w-14 h-14 flex items-center justify-center border-2 border-[#3b3f5c] rounded-full hover:bg-[#3b3f5c] transition" title="LinkedIn">
         <svg class="w-6 h-6 fill-white" viewBox="0 0 24 24">
           <path d="M6.94 6.5a1.44 1.44 0 1 0 0-2.88a1.44 1.44 0 0 0 0 2.88Zm-.72 2h2.88v9H6.22v-9ZM10.88 8.5h2.76v1.2h.04c.4-.76 1.38-1.56 2.84-1.56c3.04 0 3.6 2 3.6 4.6v5.26h-2.88v-4.66c0-1.12-.02-2.56-1.56-2.56c-1.56 0-1.8 1.22-1.8 2.48v4.74h-2.88v-9Z"/>
         </svg>
       </a>
-      <a href="https://github.com/" target="_blank" class="w-14 h-14 flex items-center justify-center border-2 border-[#3b3f5c] rounded-full hover:bg-[#3b3f5c] transition" title="GitHub">
+      <a href="https://github.com/work-georgeliteral" target="_blank" class="w-14 h-14 flex items-center justify-center border-2 border-[#3b3f5c] rounded-full hover:bg-[#3b3f5c] transition" title="GitHub">
         <svg class="w-6 h-6 fill-white" viewBox="0 0 24 24">
           <path d="M12 .5C5.65.5.5 5.65.5 12A11.5 11.5 0 0 0 8.03 23c.58.1.79-.26.79-.58v-2.03c-3.27.71-3.96-1.48-3.96-1.48c-.53-1.36-1.3-1.72-1.3-1.72c-1.06-.73.08-.71.08-.71c1.17.08 1.78 1.2 1.78 1.2c1.05 1.8 2.75 1.28 3.42.98c.1-.77.41-1.29.74-1.58c-2.61-.3-5.36-1.31-5.36-5.84c0-1.29.46-2.35 1.2-3.18c-.12-.3-.52-1.5.11-3.12c0 0 .98-.31 3.21 1.2a11.17 11.17 0 0 1 5.86 0c2.22-1.51 3.2-1.2 3.2-1.2c.63 1.62.23 2.82.11 3.12c.75.83 1.2 1.89 1.2 3.18c0 4.55-2.76 5.54-5.39 5.83c.43.38.81 1.11.81 2.23v3.3c0 .32.21.69.8.57A11.5 11.5 0 0 0 23.5 12c0-6.35-5.15-11.5-11.5-11.5Z"/>
         </svg>
