--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
     </h2>
     <p class="text-[#3b3f5c] text-lg mb-4">Web Developer</p>
     <p class="text-lg leading-relaxed mb-6">
-      I’m passionate about crafting scalable, elegant web solutions. I specialize in web development, and I love building dark-themed interfaces that feel both modern and minimalist.
-    </p>
+    IT graduate with a passion for coding and a drive for self-learning, always eager to grow and build innovative solutions.</p>
     <a href="#projects"
       class="inline-block px-6 py-3 bg-[#3b3f5c] text-white rounded-full hover:bg-[#1e1e1e] transition font-medium">
       Explore My Work
@@ -67,7 +66,7 @@
     <div class="slide-in max-w-4xl mx-auto">
       <h3 class="slide-in text-4xl font-bold mb-6 text-[#3b3f5c]">About Me</h3>
       <p class="slide-in text-lg">
-        With a strong foundation in both front-end and back-end technologies, I enjoy solving problems and improving user experience through thoughtful design and efficient code.
+        I am a passionate web developer dedicated to addressing the needs of people by building fast, reliable, and user-friendly websites. Through my work, I strive to provide effective solutions to the challenges individuals and businesses encounter in the digital space.
       </p>
     </div>
   </section>
@@ -82,6 +81,30 @@
           <p>A minimal and responsive dark-mode portfolio built entirely with HTML and Tailwind CSS.</p>
         </div>
         <div class="bg-[#1e1e1e] p-6 rounded-xl border border-[#3b3f5c] hover:scale-105 transition shadow-lg">
+          <h4 class="text-2xl font-semibold mb-2">📊 Admin Dashboard</h4>
+          <p>A structured dashboard interface designed for managing content and analytics efficiently.</p>
+        </div>
+         <div class="bg-[#1e1e1e] p-6 rounded-xl border border-[#3b3f5c] hover:scale-105 transition shadow-lg">
+          <h4 class="text-2xl font-semibold mb-2">📊 Admin Dashboard</h4>
+          <p>A structured dashboard interface designed for managing content and analytics efficiently.</p>
+        </div>
+         <div class="bg-[#1e1e1e] p-6 rounded-xl border border-[#3b3f5c] hover:scale-105 transition shadow-lg">
+          <h4 class="text-2xl font-semibold mb-2">📊 Admin Dashboard</h4>
+          <p>A structured dashboard interface designed for managing content and analytics efficiently.</p>
+        </div>
+         <div class="bg-[#1e1e1e] p-6 rounded-xl border border-[#3b3f5c] hover:scale-105 transition shadow-lg">
+          <h4 class="text-2xl font-semibold mb-2">📊 Admin Dashboard</h4>
+          <p>A structured dashboard interface designed for managing content and analytics efficiently.</p>
+        </div>
+         <div class="bg-[#1e1e1e] p-6 rounded-xl border border-[#3b3f5c] hover:scale-105 transition shadow-lg">
+          <h4 class="text-2xl font-semibold mb-2">📊 Admin Dashboard</h4>
+          <p>A structured dashboard interface designed for managing content and analytics efficiently.</p>
+        </div>
+         <div class="bg-[#1e1e1e] p-6 rounded-xl border border-[#3b3f5c] hover:scale-105 transition shadow-lg">
+          <h4 class="text-2xl font-semibold mb-2">📊 Admin Dashboard</h4>
+          <p>A structured dashboard interface designed for managing content and analytics efficiently.</p>
+        </div>
+         <div class="bg-[#1e1e1e] p-6 rounded-xl border border-[#3b3f5c] hover:scale-105 transition shadow-lg">
           <h4 class="text-2xl font-semibold mb-2">📊 Admin Dashboard</h4>
           <p>A structured dashboard interface designed for managing content and analytics efficiently.</p>
         </div>
